    lambda expressions.

    Updated the Logtalk compiler in order to preprocess proprietary Prolog
    directives (using any defined config file hooks) after term-expansion
    but before trying to compile the directives as Logtalk directives. This
    change allows for simpler and more robust handling of Prolog proprietary
    directives, specially module directives.

    Added support for the built-in non-terminal call//1 specified in the ISO
    Prolog standardization proposal for Definite Clause Grammars.

    Improved the implementation of Definite Clause Grammars in order to
    rewrite exceptions generated when processing NonTerminal, ::NonTerminal,
    and Obj::NonTerminal goals in grammar rules to refer to non-terminals
    instead of compiled predicate forms when running in debug mode.

    Changed the scope of the built-in methods phrase/2-3 from public to
    private for consistent meta-predicate semantics. Updated the "dcgs"
    example and the corresponding unit tests in order to comply with the
    new phrase/2-3 predicate scope.

    Corrected a bug in the implementation of the phrase/2-3 built-in methods
    that could allow access to non-visible grammar rules.

    Improved performance of Module:NonTerminal goals in grammar rules.

    Corrected a bug in the implementation of the dynamic/0 directive where
    the Logtalk compiler would fail to generate all the necessary dynamic/1
    predicate directives. Bug introduced in the previous stable release.

    Corrected a bug in the implementation of the clause/2 built-in method
    where an error would be generated when trying to access clauses for
    local dynamic predicates without a corresponding dynamic/1 directive
    within objects and categories with a dynamic/0 directive.

    Corrected a bug in the compilation of meta-calls and the <</2 control
    construct in debug mode where the meta-arguments would not be compiled
    in debug mode.
