@@ -16017,6 +16017,13 @@ current_logtalk_flag(version, version(2, 40, 0)).
 '$lgt_iso_spec_pred'(halt).
 '$lgt_iso_spec_pred'(halt(_)).
 
+% the following predicate are not part of the ISO/IEC 13211-1 Prolog standard
+% but can be found on the Core Revision standardization proposal; more important,
+% these predicates are built-in predicates in all supported Prolog compilers
+
+'$lgt_iso_spec_pred'(callable(_)).
+'$lgt_iso_spec_pred'(compare(_)).
+
 
 
 
